# Work_Cheatsheet

./: .gitignore  404.html  README.md  cmake.md  commit.sh  gdb.md  git.md  index.html  makefile.md  mkdocs.yml  shell.md  sitemap.xml  start_serve.bat  start_serve.sh  sublime.md  svn.md  vim.md  vs.md  vs2005.md
bat/: index.html
client/code_snippets/: index.html
client/tmp/: index.html
client/流程/: index.html
cmake/: index.html
docs/: README.md  bat.md  gdb.md  git.md  index.md  shell.md  svn.md  vim.md  vs.md
docs/client/: code_snippets.md  tmp.md  流程.md
docs/server/: coding_tips.md  small_code_snippets.md  发版与热更.md  基础流程.md  开发环境搭建.md  战斗流程.md  逻辑流程.md
docs/work/: WorkCheatsheet.md  gm.md  path.md  qa.md  常用英文.md
gdb/: index.html
git/: index.html
makefile/: index.html
mkdocs/: search_index.json
search/: search_index.json
server/code_snippets/: index.html
shell/: index.html
sublime/: index.html
svn/: index.html
vim/: index.html
vs/: index.html
work/: index.md
work/echo_server/: CMakeLists.txt  server.sln
work/echo_server/echo_client/: CMakeLists.txt  echo_client.vcxproj  echo_client.vcxproj.filters
work/echo_server/echo_client/src/: main.cpp
work/echo_server/echo_server/: echo_server.vcxproj  echo_server.vcxproj.filters
work/echo_server/echo_server/src/: servermodule.cpp  servermodule.h
work/echo_server/include/common/: tlvprotocol.h
work/echo_server/lib/: log.lib  utility.lib
work/echo_server/lib/linux/: librmi.so.0
work/echo_server/notes/: echo_server.md
work/echo_server/servercommon/: servercommon.h
(+83 files in other folders)
